# rn_audio_player

./: .env  App.tsx  README.md  app.config.ts  app.json  package-lock.json  package.json
ios/: Podfile
ios/RNAudioPlayer/: Info.plist
ios/RNAudioPlayer.xcodeproj/: project.pbxproj
ios/RNAudioPlayer.xcodeproj/xcshareddata/xcschemes/: RNAudioPlayer.xcscheme
ios/RNAudioPlayer.xcworkspace/: contents.xcworkspacedata
modules/expo-audio-engine/: expo-module.config.json  index.ts  package.json
modules/expo-audio-engine/ios/: AudioEnginePlayer.swift  AudioSessionManager.swift  ExpoAudioEngine.podspec  ExpoAudioEngineModule.swift  NowPlayingService.swift  WaveformCppBridge.mm
modules/expo-audio-engine/src/: ExpoAudioEngine.types.ts  ExpoAudioEngineModule.ts  index.ts
modules/waveform-cpp/: CMakeLists.txt  ios.toolchain.cmake
modules/waveform-cpp/include/: waveform_peaks.h
modules/waveform-cpp/src/: waveform_peaks.cpp
scripts/: push_audio.sh
src/: config.ts
src/components/: AudioListItem.tsx  MiniPlayerBar.tsx  PillarVisualizer.tsx  PlaybackControls.tsx  ReanimatedCircularVisualizer.tsx  SkiaCircularVisualizer.tsx  Visualizer.tsx  WaveformSeeker.tsx
src/hooks/: useFFTData.ts
src/models/: AudioTrack.ts
src/navigation/: AppNavigator.tsx
src/screens/: AudioListScreen.tsx  AudioPlayerScreen.tsx
src/services/: AudioMetadataService.ts  AudioPlayerService.ts  SQLiteService.ts
src/stores/: fftStore.ts  useAudioMetadataStore.ts  useAudioTrackStore.ts
src/utils/: formatDuration.ts
